--- a/docker/cloud-application/metadata/long-desc.html
+++ b/docker/cloud-application/metadata/long-desc.html
@@ -1,4 +1,12 @@
-<p class="clearfix">An application that classifies a reply to a tweet based on it's stance to the original. Possible stances are; support, deny, query, and comment. Note that the iput to this application should be document containing the official Twitter JSON of both the original tweet and the replies you wish to classify. Both the reply and the original tweet must be present for the application to work, and you can provide as many tweets as you like (multiple replies to a single tweet, or multiple tweet/reply pairs etc.). If using the REST API documents should be sent as <code>text/plain</code> to avoid the JSON being parsed by GATE Cloud prior to the application running.</p>
+<p class="clearfix">An application that classifies a reply to a tweet based on it's stance to the original. Possible stances are; support, deny, query, and comment. Note that the input to this application should be document containing the official Twitter JSON of both the original tweet and the replies you wish to classify. Both the reply and the original tweet must be present for the application to work, and you can provide as many tweets as you like (multiple replies to a single tweet, or multiple tweet/reply pairs etc.). If using the REST API documents should be sent as <code>text/plain</code> to avoid the JSON being parsed by GATE Cloud prior to the application running.</p>
+
+<p class="clearfix">Although originally intended for processing threads of tweets, the classifier can be used with text from other sources (forum posts, YouTube comments etc.) as long as they are provided to the service in the right format. While the JSON object for a single tweet contains a lot of information the current version of the stance classifier only uses the text of the tweet. This means it is easy to generate compatible JSON from other sources.</p>
+
+<p>As with tweets each comment should be containted within a single JSON object. Each JOSN object must contain the fields <code>text</code> and <code>id_str</code> which hold the text of the comment and a unique ID respectively. A third field <code>in_reply_to_status_id_str</code> is used to signifiy which other comment this one is in reply to. A simple example of one comment and a reply that is classified as supportive would be as follows:</p>
+
+<pre>{"text":"this is the original post", "id_str":"1"}
+
+{"text":"I agree with the original post", "id_str":"2", "in_reply_to_status_id_str":"1"}</pre>
 
 <p><button class="btn btn-info" data-toggle="collapse" data-target="#ldAnnotationDetails"><i class="icon-info-sign icon-white"></i> Annotation details</button></p>
 
