latest english version that uses BERTweet

--- a/docker/cloud-application/metadata/english/long-desc.html
+++ b/docker/cloud-application/metadata/english/long-desc.html
@@ -8,6 +8,8 @@
 
 {"text":"I agree with the original post", "id_str":"2", "in_reply_to_status_id_str":"1"}</pre>
 
+<p>Our approach is an ensemble of our two best models, as evaluated on the RumourEval 2019 Twitter test set. Both of these models are fine-tuned BERTweet models, taking as input either a pair of original and reply tweets or the reply tweet only. More details about the models and our approach can be found in <a href="https://arxiv.org/pdf/2303.12665.pdf">this paper</a>.</p>
+
 <p><button class="btn btn-info" data-toggle="collapse" data-target="#ldAnnotationDetails"><i class="icon-info-sign icon-white"></i> Annotation details</button></p>
 
 <div class="collapse clearfix" id="ldAnnotationDetails">
